// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RenderCheckboxGroup Util should match snapshot 1`] = `
<div>
  <div
    class="MuiFormGroup-root"
  >
    <div
      aria-live="polite"
    />
    <div
      class="MuiBox-root MuiBox-root-4"
    >
      <div>
        <span>
          Grid Component
        </span>
        <div>
          <div
            data-md="6"
            data-xs="12"
          >
            <span>
              GridItem Component
            </span>
            <div>
              <label
                class="MuiFormControlLabel-root"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-17 MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-checked-18 Mui-checked MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      aria-describedby="error-0.5"
                      checked=""
                      class="PrivateSwitchBase-input-20"
                      data-indeterminate="false"
                      type="checkbox"
                      value="1"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                >
                  <div
                    type="style-6"
                  >
                    test1
                    (Typography)
                  </div>
                </span>
              </label>
            </div>
          </div>
          <div
            data-md="6"
            data-xs="12"
          >
            <span>
              GridItem Component
            </span>
            <div>
              <label
                class="MuiFormControlLabel-root"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-17 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      aria-describedby="error-0.5"
                      class="PrivateSwitchBase-input-20"
                      data-indeterminate="false"
                      type="checkbox"
                      value="2"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                >
                  <div
                    type="style-6"
                  >
                    test2
                    (Typography)
                  </div>
                </span>
              </label>
            </div>
          </div>
          <div
            data-md="6"
            data-xs="12"
          >
            <span>
              GridItem Component
            </span>
            <div>
              <label
                class="MuiFormControlLabel-root"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-17 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      aria-describedby="error-0.5"
                      class="PrivateSwitchBase-input-20"
                      data-indeterminate="false"
                      type="checkbox"
                      value="3"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                >
                  <div
                    type="style-6"
                  >
                    test3
                    (Typography)
                  </div>
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RenderCheckboxGroup Util should match snapshot when error 1`] = `
<div>
  <div
    class="MuiFormGroup-root"
  >
    <div
      aria-live="polite"
    >
      <div
        class="MuiBox-root MuiBox-root-85"
      >
        <div
          color="error"
          id="error-0.5"
          type="style-5"
        >
          Some error
          (Typography)
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-86"
    >
      <div>
        <span>
          Grid Component
        </span>
        <div>
          <div
            data-md="6"
            data-xs="12"
          >
            <span>
              GridItem Component
            </span>
            <div>
              <label
                class="MuiFormControlLabel-root"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-99 MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-checked-100 Mui-checked MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      aria-describedby="error-0.5"
                      checked=""
                      class="PrivateSwitchBase-input-102"
                      data-indeterminate="false"
                      type="checkbox"
                      value="1"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                >
                  <div
                    type="style-6"
                  >
                    test1
                    (Typography)
                  </div>
                </span>
              </label>
            </div>
          </div>
          <div
            data-md="6"
            data-xs="12"
          >
            <span>
              GridItem Component
            </span>
            <div>
              <label
                class="MuiFormControlLabel-root"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-99 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      aria-describedby="error-0.5"
                      class="PrivateSwitchBase-input-102"
                      data-indeterminate="false"
                      type="checkbox"
                      value="2"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                >
                  <div
                    type="style-6"
                  >
                    test2
                    (Typography)
                  </div>
                </span>
              </label>
            </div>
          </div>
          <div
            data-md="6"
            data-xs="12"
          >
            <span>
              GridItem Component
            </span>
            <div>
              <label
                class="MuiFormControlLabel-root"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-99 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      aria-describedby="error-0.5"
                      class="PrivateSwitchBase-input-102"
                      data-indeterminate="false"
                      type="checkbox"
                      value="3"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                >
                  <div
                    type="style-6"
                  >
                    test3
                    (Typography)
                  </div>
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RenderCheckboxGroup Util should match snapshot when value is not set 1`] = `
<div>
  <div
    class="MuiFormGroup-root"
  >
    <div
      aria-live="polite"
    />
    <div
      class="MuiBox-root MuiBox-root-167"
    >
      <div>
        <span>
          Grid Component
        </span>
        <div>
          <div
            data-md="6"
            data-xs="12"
          >
            <span>
              GridItem Component
            </span>
            <div>
              <label
                class="MuiFormControlLabel-root"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-180 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      aria-describedby="error-0.5"
                      class="PrivateSwitchBase-input-183"
                      data-indeterminate="false"
                      type="checkbox"
                      value="1"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                >
                  <div
                    type="style-6"
                  >
                    test1
                    (Typography)
                  </div>
                </span>
              </label>
            </div>
          </div>
          <div
            data-md="6"
            data-xs="12"
          >
            <span>
              GridItem Component
            </span>
            <div>
              <label
                class="MuiFormControlLabel-root"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-180 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      aria-describedby="error-0.5"
                      class="PrivateSwitchBase-input-183"
                      data-indeterminate="false"
                      type="checkbox"
                      value="2"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                >
                  <div
                    type="style-6"
                  >
                    test2
                    (Typography)
                  </div>
                </span>
              </label>
            </div>
          </div>
          <div
            data-md="6"
            data-xs="12"
          >
            <span>
              GridItem Component
            </span>
            <div>
              <label
                class="MuiFormControlLabel-root"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-180 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      aria-describedby="error-0.5"
                      class="PrivateSwitchBase-input-183"
                      data-indeterminate="false"
                      type="checkbox"
                      value="3"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                >
                  <div
                    type="style-6"
                  >
                    test3
                    (Typography)
                  </div>
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
